fix: adjust the size to work better on smaller screens

--- a/2-css/1-basic-css/2-todo-list/styles.css
+++ b/2-css/1-basic-css/2-todo-list/styles.css
@@ -8,8 +8,8 @@ h1 {
   color: #333;
 }
 .box {
-  width: 300px;
-  padding: 40px;
+  width: 280px;
+  padding: 30px 30px 30px 0;
   background: #fff;
   margin: 40px auto;
   border-radius: 20px;
